优化DB分析方言实现类