@@ -5,7 +5,6 @@ import com.zwbd.dbcrawlerv4.dao.DatabaseDialect;
 import com.zwbd.dbcrawlerv4.dao.DialectFactory;
 import com.zwbd.dbcrawlerv4.dto.metadata.*;
 import com.zwbd.dbcrawlerv4.entity.DataBaseInfo;
-import com.zwbd.dbcrawlerv4.entity.DataBaseType;
 import com.zwbd.dbcrawlerv4.entity.ExecutionMode;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -19,7 +18,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 
 /**
  * @Author: wnli
@@ -99,47 +97,52 @@ public class MetadataCollectorService {
                 String dbProductName = metaData.getDatabaseProductName();
                 String dbProductVersion = metaData.getDatabaseProductVersion();
 
-                // 2. 获取所有catalogs/schemas信息
-                List<CatalogMetadata> catalogs = dialect.getCatalogs(connection);
-
-                log.info("get catalogs: {}", catalogs.size());
-
-                // 3. 为每个catalog/schema获取表信息并处理
-                List<CatalogMetadata> processedCatalogs = catalogs.stream()
-                        .map(catalog -> {
+                // 2. 获取所有catalogs
+                List<String> catalogNames = dialect.getCatalogNames(connection);
+                log.info("get catalogs: {}", catalogNames);
+                List<SchemaMetadata> processedCatalogs = new ArrayList<>(List.of());
+                // 开始遍历
+                catalogNames.forEach(catalog -> {
+                    try {
+                        //设置上下文
+                        connection.setCatalog(catalog);
+                        log.info("handle catalog: {}", catalog);
+                        //获取全部schema
+                        List<SchemaMetadata> schemas = dialect.getSchemas(connection);
+                        log.info("get schemas: {}", schemas);
+                        schemas.forEach(schemaMetadata -> {
                             try {
-                                //设置上下文
-                                if (dataBaseInfo.getType() == DataBaseType.SQLSERVER) {
-
-                                } else {
-                                    connection.setCatalog(catalog.schemaName());
-                                }
-                                log.info("handle catalog: {}", catalog);
                                 // 获取该schema下的所有表
                                 List<TableMetadata> tablesInSchema = dialect.getTablesForSchema(
-                                        connection, connection.getCatalog(), catalog.schemaName());
-
-                                // 并行处理每个表，获取其详细元数据和指标
+                                        connection, catalog, schemaMetadata.schemaName());
+                                log.info("get tables in schema: {}", tablesInSchema);
+                                // 处理每个表，获取其详细元数据和指标!!!!禁止并发执行
                                 List<TableMetadata> processedTables = tablesInSchema.stream()
                                         .map(tableInfo -> {
                                             try {
                                                 log.debug("handle table: {}", tableInfo.tableName());
-                                                return processTable(connection, dialect, tableInfo, mode);
+                                                return processTable(dataSource, dialect, catalog, tableInfo, mode);
                                             } catch (SQLException e) {
-                                                throw new MetadataCollectionException(
-                                                        "handle table '" + catalog.schemaName() + "." + tableInfo.tableName() + "' error ", e);
+                                                log.error("handle table {} error", tableInfo, e);
+//                                                throw new MetadataCollectionException(
+//                                                        "handle table '" + schemaMetadata.schemaName() + "." + tableInfo.tableName() + "' error ", e);
+                                                return null;
                                             }
                                         })
-                                        .collect(Collectors.toList());
+                                        .filter(Objects::nonNull)
+                                        .toList();
                                 log.info("processed tables: {}", processedTables.size());
                                 // 返回包含处理后表信息的catalog
-                                return catalog.withTables(processedTables);
+                                processedCatalogs.add(schemaMetadata.withTables(processedTables));
+//                                        return schemaMetadata.withTables(processedTables);
                             } catch (SQLException e) {
-                                throw new MetadataCollectionException(
-                                        "handle schema '" + catalog.schemaName() + "' error ", e);
+                                throw new MetadataCollectionException("handle schema '" + schemaMetadata.getSchemaName() + "' error ", e);
                             }
-                        })
-                        .collect(Collectors.toList());
+                        });
+                    } catch (SQLException e) {
+                        throw new MetadataCollectionException("handle catalog '" + catalog + "' error ", e);
+                    }
+                });
 
                 // 4. 组装最终结果
                 return new DatabaseMetadata(dbProductName, dbProductVersion, processedCatalogs);
@@ -168,23 +171,34 @@ public class MetadataCollectorService {
     /**
      * 处理单个表的完整流程：获取详情、计算指标、然后将两者合并。
      */
-    private TableMetadata processTable(Connection connection, DatabaseDialect dialect, TableMetadata tableInfo, ExecutionMode mode) throws SQLException {
-        // 步骤 a: 获取表的详情（包括Schema和数据样本）
-        TableMetadata tableDetails = dialect.getTableDetails(connection, tableInfo);
+    private TableMetadata processTable(DataSource dataSource, DatabaseDialect dialect, String catalog, TableMetadata tableInfo, ExecutionMode mode) throws SQLException {
+//        if(tableInfo.tableName().equals("vw_Project_Analysis_Master")){
+//            System.out.println();
+//        }
+        try (Connection connection = dataSource.getConnection()) {
+            // 设置此连接的上下文
+            connection.setCatalog(catalog);
+            // 步骤 a: 获取表的详情（包括Schema和数据样本）
+            TableMetadata tableDetails = dialect.getTableDetails(connection, tableInfo);
+            log.info("process table: {} rowCount: {}", tableDetails.tableName(), tableDetails.rowCount());
+            // 步骤 b: 根据指定的模式计算扩展指标，跳过空表
+            Map<String, ExtendedMetrics> metricsMap;
+            if (tableDetails.rowCount() == 0 && tableDetails.sampleData().orElseGet(List::of).isEmpty()) {
+                metricsMap = new HashMap<>();
+            } else {
+                metricsMap = dialect.calculateMetricsForTable(connection, tableDetails, mode);
+            }
+            // 步骤 c: (Enrichment) 将计算出的指标填充回列元数据中
+            List<ColumnMetadata> enrichedColumns = tableDetails.columns().stream()
+                    .map(column -> {
+                        ExtendedMetrics metrics = metricsMap.get(column.columnName());
+                        return (metrics != null) ? column.withMetrics(Optional.of(metrics)) : column;
+                    })
+                    .toList();
 
-        // 步骤 b: 根据指定的模式计算扩展指标
-        Map<String, ExtendedMetrics> metricsMap = dialect.calculateMetricsForTable(connection, tableDetails, mode);
-
-        // 步骤 c: (Enrichment) 将计算出的指标填充回列元数据中
-        List<ColumnMetadata> enrichedColumns = tableDetails.columns().stream()
-                .map(column -> {
-                    ExtendedMetrics metrics = metricsMap.get(column.columnName());
-                    return (metrics != null) ? column.withMetrics(Optional.of(metrics)) : column;
-                })
-                .toList();
-
-        // 步骤 d: 返回一个全新的、包含所有信息的 TableMetadata
-        return tableDetails.withColumns(enrichedColumns);
+            // 步骤 d: 返回一个全新的、包含所有信息的 TableMetadata
+            return tableDetails.withColumns(enrichedColumns);
+        }
     }
 
     /**
